--- a/style.css
+++ b/style.css
@@ -144,15 +144,39 @@ header {
 /* Section 1 */
 
 .welcometext-background {
-  background-color: rgb(162, 202, 179);
-  margin: 5%;
-  border-radius: 2rem;
+  /*background-color: rgb(162, 202, 179);
   height: auto;
-  padding: 10%;
+  padding: 10%;*/
+
+  background: linear-gradient(-45deg,
+    rgb(162, 202, 179),
+    rgb(222, 242, 230),
+    rgb(142, 182, 159),
+    rgb(162, 202, 179)
+  );
+  background-size: 400% 400%;
+  animation: gradientMove 20s ease infinite;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .welcome-text {
-  display: flex;
+  /*display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: rgb(60, 60, 124);
@@ -161,7 +185,15 @@ header {
   border: 2px solid black;
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: large;
-  width: 60%;
+  width: 60%;*/
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+
+  margin: 5%;
+  
 }
 
 .welcome-text p {
@@ -170,7 +202,7 @@ header {
 }
 
 .welcome-text h1 {
-  padding: 10%;
+  padding: 5%;
 }
 
 .profilePicture {
@@ -178,7 +210,7 @@ header {
   display: flex;
   position: relative;
   height: 500px;
-  margin-left: 10%;
+  margin: 5%;
 }
 
 /* End of section 1 */
@@ -251,31 +283,45 @@ header {
 .programmes-section {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   height: auto;
-  background-color: rgb(162, 202, 179);
   padding: 10rem;
-  border-radius: 30px;
-  margin: 5%;
+  background: linear-gradient(-45deg,
+    rgb(162, 202, 179),
+    rgb(222, 242, 230),
+    rgb(142, 182, 159),
+    rgb(162, 202, 179)
+  );
+  background-size: 400% 400%;
+  animation: gradientMove 20s ease infinite;
   
 }
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .programmes-section h1 {
-  display: flex;
   text-align: center;
-  width: 10rem;
-  margin: 0 auto;
-  text-decoration-line: underline;
+  margin-bottom: 4rem;
 }
 
 .logo-programmes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
-  gap: 40px;
+  gap: 10%;
   justify-items: center;
   align-items: center;
-  gap: 10%;
-  margin: 5% 15%;
-  padding: 0 5%;
+  
 }
 
 .logo-programmes figure {
@@ -366,10 +412,6 @@ header {
 }
 
 .project-section {
-  border: 1px solid black;
-  margin: 5%;
-  border-radius: 2rem;
-  background: #40526A;
   position: relative;
 }
 
@@ -391,7 +433,8 @@ header {
   height: auto;
   align-items: center;
   border-radius: 2rem;
-  border: 3px solid black;
+  border: 1px solid rgb(146, 138, 138);
+  background-color: rgb(208, 207, 208);
   margin: 5%;
 }
 
@@ -471,9 +514,11 @@ header {
 
 .contactform-space {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   height: auto;
+  background-image: url("picture/waves-color.jpg");
 
 }
 
@@ -482,9 +527,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #d2d2d2;
-  border: 1px solid #d2d2d2;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 2rem;
   width: 50%;
   margin: 10%;
   padding: 5% 0;
@@ -498,27 +542,28 @@ header {
   width: 300px;
   height: 20px;
   padding: 5px;
+  border-radius: 2rem;
 }
 
 #form-message {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 600px;
   height: auto;
   padding: 2%;
   resize: both;
   overflow: scroll;
+  border-radius: 2rem;
 }
 
 .contact-form button {
   margin: 2%;
   padding: 1%;
-  width: 100px;
-  border-radius: 8px;
-  background-color: rgb(157, 199, 99);
+  width: 150px;
+  border-radius: 2rem;
+  background-color: rgb(162, 202, 179);
 }
 
 .contact-form button:hover {
-  background-color: rgb(119, 169, 49);
+  background-color: rgb(106, 182, 139);
 }
 
 /* FORM END */
