--- a/style.css
+++ b/style.css
@@ -49,32 +49,24 @@ header {
   width: 100%;
 }
 
-.headerPicture {
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-  margin: 0;
-  height: 900px;
-  overflow-y: hidden;
-}
-
 .welcomeText {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
   position: absolute;
   z-index: 5;
   width: 50%;
   color: white;
   margin-top: 30%;
   margin-left: 10%;
+  margin-right: 10%;
   font-family:Georgia, 'Times New Roman', Times, serif;
   font-size: large;
 }
 
 .welcomeText p {
-  padding-left: 0;
-  margin-left: 0;
+  padding: 0;
+  margin: 1rem 0;
+  text-align: left;
 }
 
 @keyframes slideInFromLeft {
@@ -151,7 +143,12 @@ header {
 }
 
 /* Mobilvy */
-@media (max-width: 768px) {
+@media (max-width: 1400px) {
+  .welcomeText {
+    margin-top: 25%;
+  }
+}
+@media (max-width: 1000px) {
   .navMeny {
     display: none;
     flex-direction: column;
@@ -161,7 +158,6 @@ header {
     right: 0;
     width: 100%;
     text-align: center;
-    padding: 2rem 0;
   }
 
   .navMeny.show {
@@ -173,7 +169,17 @@ header {
   }
 
   .navMeny li {
-    margin: 1rem 0;
+    height: 60px;
+  }
+
+  .navMeny li:hover {
+    background-color: rgba(27, 26, 26);
+  }
+
+  .navMeny a {
+    justify-content: left;
+    align-items: center;
+    text-align: center;
   }
 
   .download-link {
@@ -182,7 +188,7 @@ header {
   }
 
   .welcomeText {
-    width: 90%;
+    width: 80vw;
     margin-left: 5%;
     font-size: medium;
     background-color: rgba(65, 59, 59, 0.7);
@@ -249,7 +255,7 @@ header {
 
 .profilePicture {
   border-radius: 40%;
-  height: 500px;
+  height: 50vw;
   margin: 2rem;
 }
 
@@ -266,9 +272,14 @@ header {
     margin: 0;
   }
 
+  .welcome-text {
+    width: 90vw;
+  }
+}
+
+@media (max-width: 500px) {
   .profilePicture {
-    margin: 1rem;
-    height: 30em;
+    height: 60vw;
   }
 }
 
@@ -276,38 +287,21 @@ header {
 
 /* Section 2 */
 
-.first-page {
-  height: auto;
-}
-
 .content-boxes {
   height: auto;
   padding: 5rem;
   background-size: cover;
   background-image: url("picture/hex_background.jpg");
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  gap: 10%;
-}
-
-.figure_1 .figure_2{
-  display: relative;
-  width: 45%;
-}
-
-.figure_1 p, .figure_2 p{
-  position: absolute;
-  z-index: 1;
-  width: 400px;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
+  align-items: flex-start;
+  gap: 10vw;
 }
 
 .content-boxes a {
   position: relative;
+  display: block;
+  text-align: center;
 }
 
 .content-boxes .figure_1 h2,
@@ -325,18 +319,36 @@ header {
 }
 
 .figure_1 img, .figure_2 img {
-  width: 400px;
-  height: 650px;
-  display: block;
-  margin-top: 2rem;
+  width: 40vw;
+  max-width: 400px;
+  aspect-ratio: 2 / 3;
   border-radius: 30px;
   box-shadow: 5px 5px 7px black, -5px -5px 7px #a2aab5;
   transition: transform 0.3s ease;
+  object-fit: cover;
 }
 
 .content-boxes img:hover {
   transform: scale(1.02)
 }
+
+@media (max-width: 768px) {
+  .figure_1 img, .figure_2 img {
+    width: 40vw;
+  }
+}
+
+@media (max-width: 500px) {
+  .content-boxes {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .figure_1 img, .figure_2 img {
+    width: 90vw;
+  }
+}
+
 
 /* End of section 2 */
 
@@ -347,7 +359,7 @@ header {
   flex-wrap: wrap;
   flex-direction: column;
   height: auto;
-  padding: 10rem;
+  padding: 7rem;
   background: linear-gradient(-45deg,
     rgb(162, 202, 179),
     rgb(222, 242, 230),
@@ -381,13 +393,13 @@ header {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, auto);
   gap: 10%;
-  justify-items: center;
   align-items: center;
-  
+  margin-bottom: 7rem;
 }
 
 .logo-programmes figure {
   position: relative;
+  text-align: center;
 }
 
 .logo-programmes figcaption {
@@ -397,9 +409,9 @@ header {
   color: white;
   font-weight: 600;
   justify-content: center;
-  align-items: center;
   width: fit-content;
   padding: 0.5em;
+  margin: 0.5em auto 0;
 }
 
 .arrow {
@@ -413,16 +425,21 @@ header {
 
 .content {
   display: none;
+  position: absolute;
   transition: all 0.4s ease;
   margin-top: 10px;
-  position: absolute;
   top: 100%;
   left: 0;
   right: 0;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
   background-color: white;
   border-radius: 1rem;
-  padding: 5px;
+  padding: 1rem;
+  z-index: 5;
+}
+
+.content p {
+  margin: 0;
 }
 
 .hidden {
@@ -431,35 +448,40 @@ header {
 
 .content.show {
   display: block;
-  z-index: 5;
-}
-
-#js-logo {
-  border-radius: 50%;
-  object-fit: cover;
-  width: 180px;
-}
-
-#sql-logo {
-  width: 190px;
 }
 
 .logo-programmes img{
-  width: 200px;
+  width: 180px;
   height: auto;
   border-radius: 50%;
+  max-width: 100%;
 }
 
-@media (max-width: 700px){
+@media (max-width: 768px){
+  .programmes-section {
+    padding: 4rem 2rem;
+    animation: none;
+    background-position: center;
+    background-size: cover;
+  }
+  
   .logo-programmes {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
   }
+
+  .logo-programmes img {
+    width: 140px;
+  }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
+  .programmes-section {
+    padding: 3rem 1rem;
+  }
   .logo-programmes {
     grid-template-columns: 1fr;
+    gap: 2rem;
   }
 }
 
@@ -496,7 +518,7 @@ header {
   border-radius: 2rem;
   border: 2px solid rgb(146, 138, 138);
   background-color: rgb(208, 207, 208);
-  margin: 0 5%;
+  margin: 5%;
 }
 
 .project-container::-webkit-scrollbar {
@@ -507,7 +529,6 @@ header {
   flex: 0 0 auto;
   width: 300px;
   height: auto;
-  /*background-color: #d7d0d0;*/
   border-radius: 1rem;
   padding: 1rem;
   margin-right: 1rem;
@@ -524,7 +545,7 @@ header {
 }
 
 .projects-link img {
-  width: 100%;
+  width: 300px;
   height: 400px;
   border-radius: 2rem;
 }
@@ -533,7 +554,7 @@ header {
   margin-top: 1rem;
   font-weight: 600;
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 .logo-used {
@@ -576,7 +597,7 @@ header {
 
 .bottom-space {
   padding: 5%;
-  box-shadow: 5px 5px 7px #a2aab5, -5px -5px 7px black;
+  box-shadow: 5px 5px 7px #a2aab5;
 }
 
 /* End of section 4 */
@@ -601,36 +622,33 @@ header {
   align-items: center;
   box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 2rem;
-  width: 50%;
+  width: 50vw;
   margin: 10%;
   padding: 5% 0;
   background-color: white;
 }
 
-.contact-form h2, p, label {
+.contact-form h2, p {
   padding: 1rem;
   margin: 0 2rem;
+  text-align: center;
+}
+
+.contact-form label {
+  align-self: flex-start;
+  margin-left: 20%;
+  margin-top: 1rem;
 }
 
 .contact-form input, textarea{
   width: 60%;
-  height: 1rem;
-  min-width: 30%;
+  min-height: 1rem;
   font-family: 'Times New Roman', Times, serif;
   padding: 1rem;
   border: 1px solid;
   border-radius: 2rem;
-  resize: both;
+  resize: none;
 }
-
-/*#form-message {
-  width: 600px;
-  height: auto;
-  padding: 2%;
-  resize: both;
-  overflow: scroll;
-  border-radius: 2rem;
-}*/
 
 .contact-form button {
   margin: 5%;
@@ -643,6 +661,19 @@ header {
 
 .contact-form button:hover {
   background-color: rgb(106, 182, 139);
+}
+
+@media (max-width: 678px) {
+  .contact-form {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 400px) {
+  .contact-form {
+    width: 90vw;
+    margin: 10% 0;
+  }
 }
 
 /* FORM END */
@@ -687,7 +718,7 @@ header {
 .socialMedia ul {
   display: flex;
   list-style: none;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .socialMedia li {
@@ -719,4 +750,24 @@ header {
 #Tuc-logo {
   height: 25px;
   width: auto;
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 350px) {
+  .footer-container {
+    padding: 30px 0;
+  }
+
+  .footer {
+    font-size: small;
+  }
+
+  .socialMedia i{
+    font-size: 30px;
+  }
 }
